Tue Sep  4 23:47:42 2001  Tom Gilbert  <tom@linuxbrit.co.uk>

	* --loadable and --unloadable modes should run --action on
	matching files, fixed.

Sun Aug 26 18:06:51 2001  Tom Gilbert  <tom@linuxbrit.co.uk>

	* Slightly tweaked menu sliding behaviour.
	* About to release 1.1.0.

Sat Aug 25 21:58:31 2001  Tom Gilbert  <tom@linuxbrit.co.uk>

	* Show zoom and new image size when zooming.

Sat Aug 25 18:36:30 2001  Tom Gilbert  <tom@linuxbrit.co.uk>

	* No need for cam to use -w as it spawns multiple feh processes.
	* Can use options menu to switch between fullscreen and window
	modes.
	* Some fullscreen code cleanups. Now a per-window option.
	* Menu code cleanups.

Sat Aug 25 17:46:35 2001  Tom Gilbert  <tom@linuxbrit.co.uk>

	* Fixed --geometry mode. When you resized the window it would still
	center/size to the size you specified in --geometry. I think
	--geometry should just say "don't change the window size", but the
	user should still be able to :)
	* Added a new menu option for freezing/unfreezing the window size.

Sat Aug 25 02:49:54 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* okay. feh menus now support toggleable items.
	* I was gonna use ellipses for the toggle state, but I found that
	I had broken ellipses in imlib2 a while back (at least I think it
	was me). So it's rectangles. I fixed imlib2 now, but there won't
	be a release for a while.
	* A couple of options can now be configured through the menus,
	will add more in time.
	* some other stuff I forget, I'm tired :)

Fri Aug 24 08:44:46 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Even better, you can copy a pixmap between displays :) This is
	much faster than Xput/get. Cheers raster.

Thu Aug 23 19:04:57 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay. So you can't copy a pixmap between two displays using
	XCopyArea :) Fair enough, back to blechy XPut/XGetImage. It works
	now with or without E, and Eterm is happy. Managed to avoid