@@ -130,3 +130,4 @@ void feh_imlib_image_sharpen(Imlib_Image im, int radius);
 void feh_imlib_image_draw_rectangle(Imlib_Image im, int x, int y, int w,
                                     int h, int r, int g, int b, int a);
 Imlib_Font feh_imlib_load_font(char *name);
+void feh_imlib_image_orientate(Imlib_Image im, int orientation);
